modules/eks/security-group.tf
#
#  EC2 Security Group to allow networking traffic with EKS cluster
#

resource "aws_security_group" "cluster" {
  description = "Cluster communication with worker nodes"
  vpc_id      = var.vpc_id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = map(
    "Name", "cluster-eks-cluster-${var.projectname}-${var.environment}",
    "Environment", "${var.environment}",
    "Terraformed", "true",
    "kubernetes.io/cluster/cluster-${var.projectname}-${var.environment}", "owned",
  )
}

resource "aws_security_group_rule" "cluster-ingress-workstation-https" {
//  cidr_blocks       = [local.workstation-external-cidr]
  cidr_blocks = ["0.0.0.0/0"]
  description       = "Allow workstation to communicate with the cluster API Server"
  from_port         = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.cluster.id
  to_port           = 443
  type              = "ingress"
}

resource "aws_security_group_rule" "cluster-ingress-workstation-ssh" {
//  cidr_blocks       = [local.workstation-external-cidr]
  cidr_blocks = ["0.0.0.0/0"]
  description       = "Allow SSH access to connect to nodes in cluster"
  from_port         = 22
  protocol          = "tcp"
  security_group_id = aws_security_group.cluster.id
  to_port           = 22
  type              = "ingress"
}



resource "aws_security_group" "nodes" {
  description = "Security group for all nodes in the cluster"
  vpc_id      = var.vpc_id 

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = map(
    "Name", "nodes-eks-cluster-${var.projectname}-${var.environment}",
    "Environment", "${var.environment}",
    "Terraformed", "true",
    "kubernetes.io/cluster/cluster-${var.projectname}-${var.environment}", "owned",
  )

}

resource "aws_security_group_rule" "nodes-ingress-self" {
  description              = "Allow node to communicate with each other"
  from_port                = 0
  protocol                 = "-1"
  security_group_id        = aws_security_group.nodes.id
  source_security_group_id = aws_security_group.nodes.id
  to_port                  = 65535
  type                     = "ingress"
}

resource "aws_security_group_rule" "nodes-ingress-cluster" {
  description              = "Allow worker Kubelets and pods to receive communication from the cluster control plane"
  from_port                = 1025
  protocol                 = "tcp"
  security_group_id        = aws_security_group.nodes.id
  source_security_group_id = aws_security_group.cluster.id
  to_port                  = 65535
  type                     = "ingress"
 }

resource "aws_security_group_rule" "cluster-ingress-node-https" {
  description              = "Allow pods to communicate with the cluster API Server"
  from_port                = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.cluster.id
  source_security_group_id = aws_security_group.nodes.id
  to_port                  = 443
  type                     = "ingress"
}

resource "aws_security_group_rule" "nodes-cluster-ingress-workstation-ssh" {
//  cidr_blocks       = [local.workstation-external-cidr]
  cidr_blocks = ["0.0.0.0/0"]
  description       = "Allow SSH access to connect to nodes in cluster"
  from_port         = 22
  protocol          = "tcp"
  security_group_id = aws_security_group.nodes.id
  to_port           = 22
  type              = "ingress"
}
